--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jboss.osgi</groupId>
         <artifactId>jbosgi-parent</artifactId>
-        <version>3.0.1-SNAPSHOT</version>
+        <version>3.0.2</version>
     </parent>
 
     <name>JBossOSGi Deployment</name>
@@ -25,14 +25,14 @@
     <artifactId>jbosgi-deployment</artifactId>
     <packaging>jar</packaging>
 
-    <version>4.0.1.Final-SNAPSHOT</version>
+    <version>4.0.1.Final</version>
 
     <!-- Source Control -->
     <scm>
         <connection>scm:git:git://github.com/jbosgi/jbosgi-deployment.git</connection>
         <developerConnection>scm:git:git@github.com:jbosgi/jbosgi-deployment.git</developerConnection>
         <url>http://github.com/jbosgi/jbosgi-deployment</url>
-        <tag>HEAD</tag>
+        <tag>4.0.1.Final</tag>
     </scm>
 
     <!-- Properties -->
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>org.jboss.osgi.spi</groupId>
             <artifactId>jbosgi-spi</artifactId>
-            <version>${version.jboss.osgi.spi}</version>
+            <version>6.0.1.Final</version>
         </dependency>
 
         <!-- Provided Dependencies -->
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>org.jboss.osgi.testing</groupId>
             <artifactId>jbosgi-testing</artifactId>
-            <version>${version.jboss.osgi.testing}</version>
+            <version>4.0.1.Final</version>
             <scope>test</scope>
         </dependency>
         <dependency>
