--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jboss.osgi</groupId>
         <artifactId>jbosgi-parent</artifactId>
-        <version>3.0.2</version>
+        <version>3.0.3-SNAPSHOT</version>
     </parent>
 
     <name>JBossOSGi Deployment</name>
@@ -37,8 +37,8 @@
 
     <!-- Properties -->
     <properties>
-        <version.jboss.osgi.spi>6.0.1.Final-SNAPSHOT</version.jboss.osgi.spi>
-        <version.jboss.osgi.testing>4.0.1.Final-SNAPSHOT</version.jboss.osgi.testing>
+        <version.jboss.osgi.spi>6.0.2.Final-SNAPSHOT</version.jboss.osgi.spi>
+        <version.jboss.osgi.testing>4.0.2.Final-SNAPSHOT</version.jboss.osgi.testing>
     </properties>
 
     <!-- Dependencies -->
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>org.jboss.osgi.spi</groupId>
             <artifactId>jbosgi-spi</artifactId>
-            <version>6.0.1.Final</version>
+            <version>${version.jboss.osgi.spi}</version>
         </dependency>
 
         <!-- Provided Dependencies -->
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>org.jboss.osgi.testing</groupId>
             <artifactId>jbosgi-testing</artifactId>
-            <version>4.0.1.Final</version>
+            <version>${version.jboss.osgi.testing}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
