--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jboss.osgi</groupId>
         <artifactId>jbosgi-parent</artifactId>
-        <version>3.0.3-SNAPSHOT</version>
+        <version>4.1.0</version>
     </parent>
 
     <name>JBossOSGi Deployment</name>
@@ -25,7 +25,7 @@
     <artifactId>jbosgi-deployment</artifactId>
     <packaging>jar</packaging>
 
-    <version>4.0.2.Final-SNAPSHOT</version>
+    <version>5.1.0.Final</version>
 
     <!-- Source Control -->
     <scm>
@@ -37,8 +37,8 @@
 
     <!-- Properties -->
     <properties>
-        <version.jboss.osgi.spi>6.0.2.Final-SNAPSHOT</version.jboss.osgi.spi>
-        <version.jboss.osgi.testing>4.0.2.Final-SNAPSHOT</version.jboss.osgi.testing>
+        <version.jboss.osgi.spi>7.1.0.Final</version.jboss.osgi.spi>
+        <version.jboss.osgi.testing>5.1.0.Final</version.jboss.osgi.testing>
     </properties>
 
     <!-- Dependencies -->
@@ -81,11 +81,12 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
