--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jboss.osgi</groupId>
         <artifactId>jbosgi-parent</artifactId>
-        <version>4.1.0</version>
+        <version>4.3.0</version>
     </parent>
 
     <name>JBossOSGi Deployment</name>
@@ -25,7 +25,7 @@
     <artifactId>jbosgi-deployment</artifactId>
     <packaging>jar</packaging>
 
-    <version>5.2.0.Final</version>
+    <version>5.3.0.Final</version>
 
     <!-- Source Control -->
     <scm>
@@ -37,8 +37,8 @@
 
     <!-- Properties -->
     <properties>
-        <version.jboss.osgi.spi>7.2.0.Final</version.jboss.osgi.spi>
-        <version.jboss.osgi.testing>5.2.0.Final</version.jboss.osgi.testing>
+        <version.jboss.osgi.spi>7.3.0.Final</version.jboss.osgi.spi>
+        <version.jboss.osgi.testing>5.3.0.Final</version.jboss.osgi.testing>
     </properties>
 
     <!-- Dependencies -->
@@ -53,6 +53,11 @@
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
